--- a/23.md
+++ b/23.md
@@ -75,7 +75,7 @@ For our Program [Noch-und-noch-nicht-fertig-werden](2010035.md) my [Choir-Friend
 
 Since in our Choir most of the Members are not very experienced with Computers and some of them are already overwhelmed by the Download form our [Ernst-Bloch-Web-Site](2010013.md), in Order to make [Easy-Life](60173.md) with [Computers](20000003.md) possible, I upload the [Scores](90000018.md) together with the Mp3-Files to [Google-Drive](2000228.md).
 
-To save Bandwidth, [Time](10000002.md), [Money](6666.md) and [Energy](10000040.md), I also send a short [Description](600056.md), how to make Files offline&nbsp;-&nbsp;even if this is quit tedious:
+To save Bandwidth, [Time](10000002.md), [Money](6666.md) and [Energy](10000040.md), I also send a short [Description](600056.md), how to make Files offline&nbsp;-&nbsp;even if this is quite tedious:
 
 ![Work for Environment!](400000155.png)
 
