--- a/23.md
+++ b/23.md
@@ -89,7 +89,7 @@ I want to use a single File, because [Goolge](240000009.md) and [Apple](24000000
 
 Though this sounds somehow obvious, up to now I never heard of such Kind of Apps and therefore&nbsp;-&nbsp;just to be sure&nbsp;-&nbsp;I document the [Idea](600012.md) again [[2]](#16052) as a [Dings-Patent](300000030.md) under the Name [Local-Web-App-Patent](300050002.md).
 
-If such Apps become widespread, good [Speculators](404.md) should go [Short](404.md) with [Stocks](404.md) from [Google](240000009.md) or [Apple](240000003.md) and good [Investors](404.md) have to put their [Money](6666.md) in the [Dings-Project](300000006.md):
+If such Apps become widespread, good [Speculators](404.md) go [Short](404.md) with [Stocks](404.md) from [Google](240000009.md) or [Apple](240000003.md) and good [Investors](404.md) put their [Resources](60174.md) into the [Dings-Project](300000006.md):
 
 ![Think Green!](400000156.jpg)
 
