--- a/2010038.md
+++ b/2010038.md
@@ -1,3 +1,3 @@
 # Driving-School-Armbruster
 
-The Driving-School-Armbruster is a [Driving-School](404.md) in [Tübingen](2000001.md).
+The Driving-School-Armbruster is a [Driving-School](1100100003.md) in [Tübingen](2000001.md).
