--- a/21.md
+++ b/21.md
@@ -2,6 +2,7 @@
 
 ## Table of Contents  <a id="1"/>
 
+ - [Day-117](#17000) MPA Final
  - [Day-115](#15000) Men-Women-Universe
  - [Day-114](#14000) Great Work, Anne!
  - [Day-113](#12300) Good Men and Women
@@ -65,6 +66,27 @@
  - [Day-12](#1200) Two Universes
  - [Day-11](#1100) Romania, Pacistan & Clash of Clans
  - [Day-10](#1000) Beauty
+
+## Day-117: MPA Final <a id="17000"/>
+
+#### Blog-Chain-Time 2023.10.26-11:30 at the Fahrschule-Armbruster  <a id="17001"/>
+###### Topics: 123-Friends, MPA
+
+After my failed [Dussel-Test](#12000) Today is the second [Exam](1100000002.md) to finally get back my [A-Driving-License](1100110001.md) for the [Motor-Bike](200500003.md).
+
+Because the [Testing](1100000002.md) was postponed due to [Illness](40800000.md) of the [Examiner](202000018.md), the last [Driving-Lesson](1100000014.md) was already a [Week](610008.md) ago and therefore my [Fear](10000109.md) is, that I have forgotten how to drive again.
+
+So though the external [Conditions](60069.md) are almost perfect Today, because of [Nervousness](10000108.md) already at the first [Junction](1100000021.md) I take the wrong [Lane](100000022.md), which leads to [Connection](60006.md)-Problems with [Erik](150000005.md) and the [Examiner](202000018.md).
+
+Fortunately shortly later we find ourself again [Am-Stadtgraben](2010039.md) and then drive to the [Training-Ground](1100100004.md), where this Time I behave like a *real* [Adult](670032.md) and pass all [Exercises](60138.md) without further Problems.
+
+Now I *really* feel [Relaxation](10000110.md) and subsequently with high [Concentration](600145.md) I also manage the Rest of the [Program](60086.md) and finally arrive at our Starting-Point.
+
+There I meet a young [Examinee]() and have a short Talk about the [Mpa-Process](), where he tells me about a Friend, who also make similar [Experiences](600096.md) with our beloved [German-System](8000998.md):
+
+After his first [Mpa-Test](1000001001.md), he was told to be 6 Months abstinent from [Alcohol](100100006.md) and then in the Second, where he had the Impression that the [Psychology](14000000.md)-Test went fine, the [Experts](12000000.md) told him that this is not 
+
+![123-Friends!](400000157.jpg)
 
 ## Day-115: Men-Women-Universe <a id="15000"/>
 
