--- a/21.md
+++ b/21.md
@@ -2,7 +2,7 @@
 
 ## Table of Contents  <a id="1"/>
 
- - [Day-117](#17000) MPA Final
+ - [Day-117](#17000) MPA-Final
  - [Day-115](#15000) Men-Women-Universe
  - [Day-114](#14000) Great Work, Anne!
  - [Day-113](#12300) Good Men and Women
@@ -67,28 +67,28 @@
  - [Day-11](#1100) Romania, Pacistan & Clash of Clans
  - [Day-10](#1000) Beauty
 
-## Day-117: MPA Final <a id="17000"/>
+## Day-117: MPA-Final <a id="17000"/>
 
 #### Blog-Chain-Time 2023.10.26-11:30 at the Fahrschule-Armbruster  <a id="17001"/>
 ###### Topics: 123-Friends, MPA, Feelings
 
-After my failed [Dussel-Test](#12000) Today I have the second [Exam](1100000002.md) to finally get back the [Motorbike-Driving-License](1100110001.md).
+After the stupid [Dussel-Test](#12000) Today I have my second [Exam](1100000002.md) to finally get back the [Motorbike-License](1100110001.md).
 
-Due to [Illness](40800000.md) of the [Examiner](202000018.md) the [Testing](1100000002.md) was postponed, my last [Driving-Lesson](1100000014.md) was already a [Week](610008.md) ago and I have little [Fear](10000109.md) is, that I have forgotten how to drive again.
+Due to [Illness](40800000.md) of the [Examiner](202000018.md) the [Testing](1100000002.md) was postponed and my last [Driving-Lesson](1100000014.md) is already a [Week](610008.md) ago&nbsp;-&nbsp;Now I feel little [Fear](10000109.md), that I have forgotten how to drive again.
 
-Therefore though the external [Conditions](60069.md) are almost perfect, because of [Nervousness](10000108.md) already at the first [Junction](1100000021.md) I take the wrong [Lane](100000022.md), which leads to [Connection](60006.md)-Problems with [Erik](150000005.md) and the [Examiner](202000018.md).
+Therefore, though the external [Conditions](60069.md) are almost perfect, because of [Nervousness](10000108.md) already at the first [Junction](1100000021.md) I take the wrong [Lane](100000022.md), which leads to [Connection](60006.md)-Problems with [Erik](150000005.md) and the [Examiner](202000018.md).
 
 Fortunately shortly later we find ourself again [Am-Stadtgraben](2010039.md) and then drive to the [Training-Ground](1100100004.md), where this Time I behave like a *real* [Adult](670032.md) and pass all [Exercises](60138.md) without Problems.
 
-Now I *really* feel [Relaxation](10000110.md) and subsequently with high [Concentration](600145.md) I also manage the Rest of the [Program](60086.md) and finally arrive at our Starting-Point.
+Because I *really* feel [Relaxation](10000110.md) now, subsequently with high [Concentration](600145.md) I also manage the Rest of the [Program](60086.md) and finally arrive at our Starting-Point.
 
-There I meet the next [Examinee](404.md) and have a short Talk about the [MPA-Process](1000001001.md), where he tells me about a [Friend](180000002.md), who also made similar [Experiences](600096.md) with our beloved [German-System](8000998.md):
+There I have a short Talk with the next [Examinee](404.md) about our [MPA-Process](1000001001.md), where he tells me a Story of a [Friend](180000002.md), who also made similar [Experiences](600096.md) with our beloved [German-System](8000998.md):
 
-After his first [MPA-Test](1000001001.md), he was told to be 6 Months abstinent from [Alcohol](100100006.md) and then in the second MPA-Meeting, where he had the Impression that even the [Psychology](14000000.md)-Part went fine, the [Experts](12000000.md) told him that he has to do another 6 Months of [Abstinence](404.md).
+After his first [MPA-Test](1000001001.md), he was told to be 6 Months abstinent from [Alcohol](100100006.md) and then in the second MPA-Meeting, where he had the Impression that even the [Psychology](14000000.md)-Part went fine, the [Experts](12000000.md) told him that he has to do another 6 Months of [Abstinence](404.md)&nbsp;-&nbsp;Oh Girls, really?
 
-On the one Hand I feel [Happiness](10000112.md), that I am not alone with my [Problem](600029.md), but on the other Hand I feel [Sadness](10000113.md) to see even more [Suffering](10000111.md) from this crazy [System](60052.md).
+On the one Hand I feel [Happiness](10000112.md), that I am not alone with my [Problem](600029.md), but on the other Hand I feel also [Sadness](10000113.md) to see even more [Suffering](10000111.md) from this crazy [System](60052.md).
 
-Howsoever, at least for me this [Nightmare](404.md) seems to be finally over now and shortly later, I even feel some [Gratitude](41000009.md), when I eat a Piece of [Pizza](203500001.md) together with two [Good-Men](20000100003.md), who I will never forget:
+Howsoever, at least for me this [Nightmare](404.md) seems to be finally over and shortly later, I even feel some [Gratitude](41000009.md), when I eat a Piece of [Pizza](203500001.md) together with two [Good-Men](20000100003.md), I will never forget:
 
 ![Thomas and Erik!](400000157.jpg)
 
