--- a/21.md
+++ b/21.md
@@ -86,11 +86,17 @@ There I have a short Talk with the next [Examinee](404.md) about our [MPA-Proces
 
 After his first [MPA-Test](1000001001.md), he was told to be 6 Months abstinent from [Alcohol](100100006.md) and then in the second MPA-Meeting, where he had the Impression that even the [Psychology](14000000.md)-Part went fine, the [Experts](12000000.md) told him that he has to do another 6 Months of [Abstinence](404.md)&nbsp;-&nbsp;Oh Girls, really?
 
+At least regarding the last Point I made exactly the same [Experience](600096.md) in my fourth MPA [[0]](#17050) with my "Friends" from [Tüv-Süd-Balingen](1000001007.md).
+
 On the one Hand I feel [Happiness](10000112.md), that I am not alone with my [Problem](600029.md), but on the other Hand I feel also [Sadness](10000113.md) to see even more [Suffering](10000111.md) from this crazy [System](60052.md).
 
 Howsoever, at least for me this [Nightmare](404.md) seems to be finally over and shortly later, I even feel some [Gratitude](41000009.md), when I eat a Piece of [Pizza](203500001.md) together with two [Good-Men](20000100003.md), I will never forget:
 
 ![Thomas and Erik!](400000157.jpg)
+
+### Footnotes
+
+[<a id="17050"/>0] Beweismittel abgelehnt: [https://holzheu.de](https://www.holzheu.de/meine-erste-mpu-beweismittel-abgelehnt)
 
 ## Day-115: Men-Women-Universe <a id="15000"/>
 
