--- a/21.md
+++ b/21.md
@@ -82,7 +82,7 @@ Fortunately shortly later we find ourself again [Am-Stadtgraben](2010039.md) and
 
 Because I *really* feel [Relaxation](10000110.md) now, subsequently with high [Concentration](600145.md) I also manage the Rest of the [Program](60086.md) and finally arrive at our Starting-Point.
 
-There I have a short Talk with the next [Examinee](404.md) about our [MPA-Process](1000001001.md), where he tells me a Story of a [Friend](180000002.md), who also made similar [Experiences](600096.md) with our beloved [German-System](8000998.md):
+There I have a short Talk with the next [Examinee](404.md) about our [MPA-Process](1000001001.md), where he tells me a [Story](60109.md) of a [Friend](180000002.md), who also made similar [Experiences](600096.md) with our beloved [German-System](8000998.md):
 
 After his first [MPA-Test](1000001001.md), he was told to be 6 Months abstinent from [Alcohol](100100006.md) and then in the second MPA-Meeting, where he had the Impression that even the [Psychology](14000000.md)-Part went fine, the [Experts](12000000.md) told him that he has to do another 6 Months of [Abstinence](404.md)&nbsp;-&nbsp;Oh Girls, really?
 
