--- a/21.md
+++ b/21.md
@@ -80,7 +80,9 @@ Therefore, though the external [Conditions](60069.md) are almost perfect, becaus
 
 Fortunately shortly later we find ourself again [Am-Stadtgraben](2010039.md) and then drive to the [Training-Ground](1100100004.md), where this Time I behave like a *real* [Adult](670032.md) and pass all [Exercises](60138.md) without Problems.
 
-Because I *really* feel [Relaxation](10000110.md) now, subsequently with high [Concentration](600145.md) I also manage the Rest of the [Program](60086.md) and finally arrive at our Starting-Point.
+Because I *really* feel [Relaxation](10000110.md) now, subsequently with high [Concentration](600145.md) I also manage the Rest of the [Program](60086.md) and finally arrive at our Starting-Point:
+
+![Finally Success!](400000158.jpg)
 
 There I have a short Talk with the next [Examinee](404.md) about our [MPA-Process](1000001001.md), where he tells me a [Story](60109.md) of a [Friend](180000002.md), who also made similar [Experiences](600096.md) with our beloved [German-System](8000998.md):
 
