--- a/21.md
+++ b/21.md
@@ -86,7 +86,7 @@ Because I *really* feel [Relaxation](10000110.md) now, subsequently with high [C
 
 There I have a short Talk with the next [Examinee](404.md) about our [MPA-Process](1000001001.md), where he tells me a [Story](60109.md) of a [Friend](180000002.md), who also made similar [Experiences](600096.md) with our beloved [German-System](8000998.md):
 
-> After his first [MPA-Test](1000001001.md), he was told to be 6 Months abstinent from [Alcohol](100100006.md) and then in the second MPA-Meeting, where he had the Impression that even the [Psychology](14000000.md)-Part went fine, the [Experts](12000000.md) told him that he has to do another 6 Months of [Abstinence](404.md).
+> After his first [MPA-Test](1000001001.md), he was told to be 6 Months abstinent from [Alcohol](100100006.md) and then in the second MPA-Meeting, where he had the Impression that even the [Psychology](14000000.md)-Part went fine, the [Experts](12000000.md) still demanded another 6 Months of [Abstinence](404.md).
 
 At least regarding the last Point I made exactly the same [Experience](600096.md) in my fourth MPA [[0]](#17050) with my "Friends" from [Tüv-Süd-Balingen](1000001007.md).
 
