--- a/21.md
+++ b/21.md
@@ -92,7 +92,7 @@ At least regarding the last Point I made exactly the same [Experience](600096.md
 
 On the one Hand I feel [Happiness](10000112.md), that I am not alone with my [Problem](600029.md), but on the other Hand I feel also [Sadness](10000113.md) to see even more [Suffering](10000111.md) from this crazy [System](60052.md).
 
-Howsoever, at least for me this [Nightmare](404.md) seems to be finally over and shortly later, I even feel even some [Gratitude](41000009.md), when I eat a Piece of [Pizza](203500001.md) together with two [Good-Men](20000100003.md), I will never forget:
+Howsoever, at least for me this [Nightmare](404.md) seems to be finally over now, and shortly later I even feel even some [Gratitude](41000009.md), when I eat a Piece of [Pizza](203500001.md) together with two [Good-Men](20000100003.md), I will never forget:
 
 ![Thomas and Erik!](400000157.jpg)
 
