--- a/21.md
+++ b/21.md
@@ -88,7 +88,7 @@ There I have a short Talk with the next [Examinee](404.md) about our [MPA-Proces
 
 > After his first [MPA-Test](1000001001.md), he was told to be 6 Months abstinent from [Alcohol](100100006.md) and then in the second MPA-Meeting, where he had the Impression that even the [Psychology](14000000.md)-Part went fine, the [Experts](12000000.md) still demanded another 6 Months of [Abstinence](404.md).
 
-At least regarding the last Point I made exactly the same [Experience](600096.md) in my fourth MPA [[0]](#17050) with my "Friends" from [Tüv-Süd-Balingen](1000001007.md).
+Come on Girls, really? A least regarding the last Point I made exactly the same [Experience](600096.md) in my fourth MPA [[0]](#17050) with my "Friends" from [Tüv-Süd-Balingen](1000001007.md).
 
 On the one Hand I feel [Happiness](10000112.md), that I am not alone with my [Problem](600029.md), but on the other Hand I feel also [Sadness](10000113.md) to see even more [Suffering](10000111.md) from this crazy [System](60052.md).
 
