--- a/21.md
+++ b/21.md
@@ -94,7 +94,7 @@ On the one Hand I feel [Happiness](10000112.md), that I am not alone with my [Pr
 
 Howsoever, at least for me this [Nightmare](404.md) seems to be finally over now, and shortly later I even feel even some [Gratitude](41000009.md), when I eat a Piece of [Pizza](203500001.md) together with two [Good-Men](20000100003.md), I will never forget:
 
-![Thomas and Erik!](400000157.jpg)
+![Erik and Thomas!](400000159.jpg)
 
 ### Footnotes
 
