--- a/21.md
+++ b/21.md
@@ -69,6 +69,31 @@
 
 ## Day-117: MPA-Final <a id="17000"/>
 
+#### Blog-Chain-Time 2023.11.02-14:00 at the Landratsamt  <a id="17002"/>
+###### Topics: MPA, Justice, Politics
+
+Today I meet my dear [Mrs-N](1000001002.md) again to finally get back all my Driving-[Rights](670004.md) from the [Our-Landrats-Amt](140100002.md).
+
+In [My-MPA-Process](1000001000.md) always had the [Feeling](60041.md), that our [Juristics-System](670001.md) does not give me the [Justage](670035.md), I would have deserved and regarding our [Political-System](141000008.md) in [Tübingen](2000001.md) the Same comes into my Mind, when I see the two Flags from [Israel](140000067.md) and [Germany](140000025.md):
+
+![Only Two?](400000160.jpg)
+
+I can understand that probably also the [Family](180000008.md) of [Our-Mayor](70000069.md) had to endure great [Suffering](10000111.md) due to [Crimes](670012.md) of the [National-Socialism](141000012.md), but can this *really* still be a [Justification](600178.md) for the current [Decisions](60095.md) in [Palestine](140000068.md)?
+
+Since I do not read much News any more, I get most [Information](60007.md) about that from [Friends](180000002.md), like for Example from my [Contenance-Trainer](1971091169.md), to whom (with all Respect) I have more [Confidence](60015.md) than for Example to wordy [Juristics](670000.md)-[Experts](12000000.md), who get a big [Stage](60010007.md) in our dear [Public-Service-Broadcasters](191000003.md).
+
+Howsoever, there are probably even more important [Problems](600029.md), like [Global-Warming](290000002.md) or [Refugees](141000013.md) and for me at the Moment most [Relevance](600114.md) has Paying yet another [MPA](1000001001.md)-[Bill](130000002.md):
+
+![Money for MPA](400000163.jpg)
+
+In Order to save [Money](6666.md) and [Time](10000002.md) for future Candidates, I discuss one of my [Ideas](600012.md), where the Son of [Mrs-N](1000001002.md) might help for this little [Problem](600029.md) with his refurbished [Motor-Bike](200500003.md) from [Suzuki](240000025.md):
+
+![Nice Machine](400000161.jpg)
+
+When driving back with [My-Bulli](1971091102.md), I see another Colleague in front of me, who obviously also found the quite popular [Solution](600024.md) for all of our [Problems](600029.md):
+
+![Really The-Truth?](400000162.jpg)
+
 #### Blog-Chain-Time 2023.10.26-11:30 at the Fahrschule-Armbruster  <a id="17001"/>
 ###### Topics: 123-Friends, MPA, Feelings
 
