--- a/70000069.md
+++ b/70000069.md
@@ -1,3 +1,7 @@
 # Boris-Erasmus_Palmer
 
 Boris-Erasmus_Palmer is a [Human](40000001.md).
+
+## Links
+
+- Wikipedia: [https://de.wikipedia.org](https://de.wikipedia.org/wiki/Boris_Palmer)
