--- a/21.md
+++ b/21.md
@@ -76,7 +76,7 @@ Today I meet my dear [Mrs-N](1000001002.md) again to finally get back all my Dri
 
 In [My-MPA-Process](1000001000.md) always had the [Feeling](60041.md), that our [Juristics-System](670001.md) does not give me the [Justage](670035.md), I would have deserved and regarding our [Political-System](141000008.md) in [Tübingen](2000001.md) the Same comes into my Mind, when I see the two Flags from [Israel](140000067.md) and [Germany](140000025.md):
 
-![Only Two?](400000160.jpg)
+![Why only Two?](400000160.jpg)
 
 I can understand that probably also the [Family](180000008.md) of [Our-Mayor](70000069.md) had to endure great [Suffering](10000111.md) due to [Crimes](670012.md) of the [National-Socialism](141000012.md), but can this *really* still be a [Justification](600178.md) for the current [Decisions](60095.md) in [Palestine](140000068.md)?
 
