--- a/21.md
+++ b/21.md
@@ -72,13 +72,13 @@
 #### Blog-Chain-Time 2023.11.02-14:00 at the Landratsamt  <a id="17002"/>
 ###### Topics: MPA, Justice, Politics
 
-Today I meet my dear [Mrs-N](1000001002.md) again to finally get back all my Driving-[Rights](670004.md) from the [Our-Landrats-Amt](140100002.md).
+Today I meet my dear [Mrs-N](1000001002.md) again to finally get back all my Driving-[Rights](670004.md) from the [Our-Landrats-Amt](140100002.md). In here Office I also meet her Boss Mrs-M, with whom I also have already had a "friendly" Conversation.
 
-In [My-MPA-Process](1000001000.md) always had the [Feeling](60041.md), that our [Juristics-System](670001.md) does not give me the [Justage](670035.md), I would have deserved and regarding our [Political-System](141000008.md) in [Tübingen](2000001.md) the Same comes into my Mind, when I see the two Flags from [Israel](140000067.md) and [Germany](140000025.md):
+During [My-MPA-Process](1000001000.md) I always had the [Feeling](60041.md), that our [German-System](8000998.md) does provide *real* [Justage](670035.md) and when I saw the two Flags from [Israel](140000067.md) and [Germany](140000025.md) in front of the [Landrats-Amt](250010001.md), I was reminded to that again:
 
 ![Why only Two?](400000160.jpg)
 
-I can understand that probably also the [Family](180000008.md) of [Our-Mayor](70000069.md) had to endure great [Suffering](10000111.md) due to [Crimes](670012.md) of the [National-Socialism](141000012.md), but can this *really* still be a [Justification](600178.md) for the current [Decisions](60095.md) in [Palestine](140000068.md)?
+I can understand that also the [Family](180000008.md) of [Our-Mayor](70000069.md) probably had to endure great [Suffering](10000111.md) due to [Crimes](670012.md) of the [National-Socialism](141000012.md), but can this *really* still be a [Justification](600178.md) for the current [Decisions](60095.md) in [Palestine](140000068.md)?
 
 Since I do not read much News any more, I get most [Information](60007.md) about that from [Friends](180000002.md), like for Example from my [Contenance-Trainer](1971091169.md), to whom (with all Respect) I have more [Confidence](60015.md) than for Example to wordy [Juristics](670000.md)-[Experts](12000000.md), who get a big [Stage](60010007.md) in our dear [Public-Service-Broadcasters](191000003.md).
 
