--- a/21.md
+++ b/21.md
@@ -72,7 +72,7 @@
 #### Blog-Chain-Time 2023.11.02-14:00 at the Landratsamt  <a id="17002"/>
 ###### Topics: MPA, Justice, Politics
 
-Today I meet my dear [Mrs-N](1000001002.md) again to finally get back all my Driving-[Rights](670004.md) from the [Our-Landrats-Amt](140100002.md). In her Office I also meet her Boss Mrs-M, with whom I also have already had a "friendly" Conversation.
+Today I meet my dear [Mrs-N](1000001002.md) again to finally get back all my Driving-[Rights](670004.md) from the [Our-Landrats-Amt](140100002.md). In her Office I also meet her [Boss](180000013.md) Mrs-M, with whom I also have already had a "friendly" Conversation.
 
 During [My-MPA-Process](1000001000.md) I always had the [Feeling](60041.md), that our [German-System](8000998.md) does provide *real* [Justage](670035.md) and when I saw the two Flags from [Israel](140000067.md) and [Germany](140000025.md) in front of the [Landrats-Amt](250010001.md), I was reminded to that again:
 
