--- a/21.md
+++ b/21.md
@@ -80,7 +80,7 @@ During [My-MPA-Process](1000001000.md) I always had the [Feeling](60041.md), tha
 
 I can understand that also the [Family](180000008.md) of [Our-Mayor](70000069.md) probably had to endure great [Suffering](10000111.md) due to [Crimes](670012.md) of the [National-Socialism](141000012.md), but can this *really* still be a [Justification](600178.md) for the current [Decisions](60095.md) in [Palestine](140000068.md)?
 
-Since I do not read much News any more, I get most [Information](60007.md) about that from [Friends](180000002.md), like for Example from my [Contenance-Trainer](1971091169.md), to whom (with all Respect) I have more [Confidence](60015.md) than for Example to wordy [Juristics](670000.md)-[Experts](12000000.md), who get a big [Stage](60010007.md) in our dear [Public-Service-Broadcasters](191000003.md).
+Since I do not read much News any more, I get most [Information](60007.md) about that from [Friends](180000002.md), like for Example from my [Contenance-Trainer](1971091169.md), to whom (with all Respect) I have more [Confidence](60015.md) than for Example to wordy [Juristics](670000.md)-[Experts](12000000.md), who get a big [Stage](60010007.md) from our beloved [Public-Service-Broadcasters](191000003.md).
 
 Howsoever, there are probably even more important [Problems](600029.md), like [Global-Warming](290000002.md) or [Refugees](141000013.md) and for me at the Moment most [Relevance](600114.md) has Paying yet another [MPA](1000001001.md)-[Bill](130000002.md):
 
