--- a/21.md
+++ b/21.md
@@ -86,7 +86,7 @@ Howsoever, there are probably even more important [Problems](600029.md), like [G
 
 ![Money for MPA](400000163.jpg)
 
-In Order to save [Money](6666.md) and [Time](10000002.md) for future Candidates, I discuss one of my [Ideas](600012.md), where the Son of [Mrs-N](1000001002.md) might help for this little [Problem](600029.md) with his refurbished [Motor-Bike](200500003.md) from [Suzuki](240000025.md):
+In Order to save [Money](6666.md) and [Time](10000002.md) for future Candidates, I then discuss one of my [Ideas](600012.md), where the Son of [Mrs-N](1000001002.md) might help for a little [Problem](600029.md) with his refurbished [Motor-Bike](200500003.md) from [Suzuki](240000025.md):
 
 ![Nice Machine](400000161.jpg)
 
