--- a/21.md
+++ b/21.md
@@ -90,7 +90,7 @@ In Order to save [Money](6666.md) and [Time](10000002.md) for future Candidates,
 
 ![Nice Machine](400000161.jpg)
 
-When driving back with [My-Bulli](1971091102.md), I see another Colleague in front of me, who obviously also found the quite popular [Solution](600024.md) for all of our [Problems](600029.md):
+When driving back with [My-Bulli](1971091102.md), I see another Colleague in front of me, who obviously found a quite popular [Solution](600024.md) for all of our [Problems](600029.md):
 
 ![Really The-Truth?](400000162.jpg)
 
