Make it consistent

--- a/21.md
+++ b/21.md
@@ -69,7 +69,7 @@
 
 ## Day-117: MPA-Final <a id="17000"/>
 
-#### Blog-Chain-Time 2023.11.02-14:00 at the Landratsamt  <a id="17002"/>
+#### Blog-Chain-Time 2023.11.02-14:00 at the Landrats-Amt  <a id="17002"/>
 ###### Topics: MPA, Justice, Politics
 
 Today I meet my dear [Mrs-N](1000001002.md) again to finally get back all my Driving-[Rights](670004.md) from the [Our-Landrats-Amt](140100002.md). In her Office I also meet her [Boss](180000013.md) Mrs-M, with whom I also have already had a "friendly" Conversation.
@@ -361,11 +361,11 @@ Unlike my [Driver-Test-Friend](1000001017.md), I never joined the [Bundeswehr](1
 ## Day-110: Good old Buddies <a id="11000"/>
 
 #### Blog-Chain-Time 2023.09.28-17:13 in Tübingen <a id="11002"/>
-###### Topics: Motorbike, MPA, Landratsamt
+###### Topics: Motorbike, MPA, Landrats-Amt
 
 After signing the [Bill](130000002.md) for my last Driving-Lession on the [Motor-Bike](200500003.md), I realize that the [Costs](60082.md) already exceeded 1.600 Euro.
 
-Greetings to my dear [Mrs-N](1000001002.md) from [our](140100002.md) Landratsamt, who told me in best [Swabian-Language](666005.md):
+Greetings to my dear [Mrs-N](1000001002.md) from [our](140100002.md) Landrats-Amt, who told me in best [Swabian-Language](666005.md):
 
 > Dann machen's halt noch schnell den Motorradführerschein neu!
 
@@ -1374,7 +1374,7 @@ Asked a Women with a small [Baby]40000011.md) about a good Wording for doing Som
 #### Blog-Chain-Time 2023.04.14-13:06 in Tübingen <a id="2101"/> 
 ###### Topics: MPA
 
-Sent an [E-Mail](9000139.md)-Request to [Mrs-N](1000001002.md) from the [Landratsamt-Tübingen](140100002.md) for sending the [Führerschein-Akte](1000001003.md) to the [IBBK-Köln](240000006.md).
+Sent an [E-Mail](9000139.md)-Request to [Mrs-N](1000001002.md) from the [Landrats-Amt-Tübingen](140100002.md) for sending the [Führerschein-Akte](1000001003.md) to the [IBBK-Köln](240000006.md).
 
 ## Day-20: Little except the Work <a id="2000"/> 
 
