--- a/21.md
+++ b/21.md
@@ -74,7 +74,7 @@
 
 Today I meet my dear [Mrs-N](1000001002.md) again to finally get back all my Driving-[Rights](670004.md) from the [Our-Landrats-Amt](140100002.md). In the Office I also meet her [Boss](180000013.md), with whom I already had a "friendly" [Conversation](40202001.md) right at the [Beginning](60154.md) of my personal MPA-[Disaster](600179.md).
 
-During [My-MPA-Process](1000001000.md) I always had the [Feeling](60041.md), that our [German-System](8000998.md) does provide *real* [Justage](670035.md) and when I saw the two Flags from [Israel](140000067.md) and [Germany](140000025.md) in front of the [Landrats-Amt](250010001.md), I was reminded to that again:
+During [My-MPA-Process](1000001000.md) I always had the [Feeling](60041.md), that our [German-System](8000998.md) does provide *real* [Justage](670035.md) and when I earlier saw the two Flags from [Israel](140000067.md) and [Germany](140000025.md) in front of the [Landrats-Amt](250010001.md), I was reminded to that again:
 
 ![Why only Two?](400000160.jpg)
 
