--- a/21.md
+++ b/21.md
@@ -94,7 +94,7 @@ In Order to save [Money](6666.md) and [Time](10000002.md) for future Candidates,
 
 When driving back with [My-Bulli](1971091102.md), I see another Colleague in front of me, who obviously found a quite popular [Solution](600024.md) for all of our [Problems](600029.md):
 
-![Really The-Truth?](400000162.jpg)
+![The-Truth?](400000162.jpg)
 
 #### Blog-Chain-Time 2023.10.26-11:30 at the Fahrschule-Armbruster  <a id="17001"/>
 ###### Topics: 123-Friends, MPA, Feelings
