--- a/21.md
+++ b/21.md
@@ -86,11 +86,11 @@ In General I get most "Outside"-[Information](60007.md) from [Friends](180000002
 
 Howsoever, there are probably even more important [Problems](600029.md), like [Global-Warming](290000002.md) or [Refugees](141000013.md) and for me at the Moment most [Relevance](600114.md) has Paying yet another [MPA](1000001001.md)-[Bill](130000002.md):
 
-![Money for MPA](400000163.jpg)
+![Last Money for MPA?](400000163.jpg)
 
 In Order to save [Money](6666.md) and [Time](10000002.md) for future Candidates, I then discuss one of my [Ideas](600012.md), where the Son of [Mrs-N](1000001002.md) might help for a little [Problem](600029.md) with his refurbished [Motor-Bike](200500003.md) from [Suzuki](240000025.md):
 
-![Nice Machine](400000161.jpg)
+![Cheap Machine?](400000161.jpg)
 
 When driving back with [My-Bulli](1971091102.md), I see another Colleague in front of me, who obviously found a quite popular [Solution](600024.md) for all of our [Problems](600029.md):
 
