--- a/21.md
+++ b/21.md
@@ -76,7 +76,7 @@ Today I meet my dear [Mrs-N](1000001002.md) again to finally get back all my Dri
 
 During [My-MPA-Process](1000001000.md) I always had the [Feeling](60041.md), that our [German-System](8000998.md) does provide *real* [Justage](670035.md) and when I earlier saw the two Flags from [Israel](140000067.md) and [Germany](140000025.md) in front of the [Landrats-Amt](250010001.md), I was reminded to that again:
 
-![Why only Two?](400000160.jpg)
+![Only Two?](400000160.jpg)
 
 I can understand that also the [Family](180000008.md) of [Our-Mayor](70000069.md) probably had to endure great [Suffering](10000111.md) due to [Crimes](670012.md) of the [National-Socialism](141000012.md), but can this *really* still be a [Justification](600178.md) for this [Decision](60095.md) in [Tübingen](2000001.md)?
 
@@ -84,9 +84,9 @@ Well, since I do not read the News any more, I have to admit, that I don't know 
 
 In General I get most "Outside"-[Information](60007.md) from [Friends](180000002.md), like for Example from my [Contenance-Trainer](1971091169.md), to whom (with all Respect) I have more [Confidence](60015.md), than for Example to wordy [Psychologists](202000014.md) or [Juristics](670000.md)-[Experts](12000000.md), who get a big [Stage](60010007.md) from our beloved [Public-Service-Broadcasters](191000003.md).
 
-Howsoever, there are probably even more important [Problems](600029.md), like [Global-Warming](290000002.md) or [Refugees](141000013.md) and for me at the Moment most [Relevance](600114.md) has Paying yet another [MPA](1000001001.md)-[Bill](130000002.md):
+Howsoever, there are probably even more important [Problems](600029.md), like [Global-Warming](290000002.md) or [Refugees](141000013.md) and for me at the Moment most [Relevance](600114.md) has the Settlement of yet another [MPA](1000001001.md)-[Bill](130000002.md):
 
-![Last Money for MPA?](400000163.jpg)
+![Last Payment?](400000163.jpg)
 
 In Order to save [Money](6666.md) and [Time](10000002.md) for future Candidates, I then discuss one of my [Ideas](600012.md), where the Son of [Mrs-N](1000001002.md) might help for a little [Problem](600029.md) with his refurbished [Motor-Bike](200500003.md) from [Suzuki](240000025.md):
 
