--- a/21.md
+++ b/21.md
@@ -78,7 +78,7 @@ During [My-MPA-Process](1000001000.md) I always had the [Feeling](60041.md), tha
 
 ![Only Two?](400000160.jpg)
 
-I can understand that also the [Family](180000008.md) of [Our-Mayor](70000069.md) probably had to endure great [Suffering](10000111.md) due to [Crimes](670012.md) of the [National-Socialism](141000012.md), but can this *really* still be a [Justification](600178.md) for this (at least for militant [Islamists](404.md)) *provocative* [Decision](60095.md) in [Tübingen](2000001.md)?
+I can understand that also the [Family](180000008.md) of [Our-Mayor](70000069.md) probably had to endure great [Suffering](10000111.md) due to [Crimes](670012.md) of the [National-Socialism](141000012.md), but can this *really* still be a [Justification](600178.md) for this (at least for militant [Islamists](1200000004.md)) *provocative* [Decision](60095.md) in [Tübingen](2000001.md)?
 
 Well, since I do not read the News any more, I have to admit, that I don't know the *real* [Facts](600181.md) behind that and perhaps this was just a *provocative* [Insinuation](600180.md) to get even more [Publicity](60175.md) for Myself?
 
