--- a/1200000004.md
+++ b/1200000004.md
@@ -1,3 +1,3 @@
 # Radical-Islamist
 
-A Radical-Islamist is a [Fighter](404.md) for the [Islam](647005.md).
+A Radical-Islamist is a [Fighter](1200000005.md) for the [Islam](647005.md).
