--- a/21.md
+++ b/21.md
@@ -80,7 +80,7 @@ During [My-MPA-Process](1000001000.md) I always had the [Feeling](60041.md), tha
 
 I can understand that also the [Family](180000008.md) of [Our-Mayor](70000069.md) probably had to endure great [Suffering](10000111.md) due to [Crimes](670012.md) of the [National-Socialism](141000012.md), but can this *really* still be a [Justification](600178.md) for this (at least for militant [Islamists](1200000004.md)) *provocative* [Decision](60095.md) in [Tübingen](2000001.md)?
 
-Well, since I do not read the News any more, I have to admit, that I don't know the *real* [Facts](600181.md) behind that and perhaps this was just a *provocative* [Insinuation](600180.md) to get even more [Publicity](60175.md) for Myself?
+Well, since I do not read [News-Papers](191000006.md) any more, I have to admit, that I don't know the *real* [Facts](600181.md) behind that and perhaps this was just a *provocative* [Insinuation](600180.md) to get even more [Publicity](60175.md) for Myself?
 
 In General I get most "Outside"-[Information](60007.md) from [Friends](180000002.md), like for Example from my [Contenance-Trainer](1971091169.md), to whom (with all Respect) I have more [Confidence](60015.md), than for Example to wordy [Psychologists](202000014.md) or [Juristics](670000.md)-[Experts](12000000.md), who get a big [Stage](60010007.md) from our beloved [Public-Service-Broadcasters](191000003.md).
 
