--- a/21.md
+++ b/21.md
@@ -92,7 +92,7 @@ In Order to save [Money](6666.md) and [Time](10000002.md) for future Candidates,
 
 ![Cheap Machine?](400000161.jpg)
 
-When driving back with [My-Bulli](1971091102.md), I see another Colleague in front of me, who obviously found a quite popular [Solution](600024.md) for *all* of our [Problems](600029.md):
+When driving back with [My-Bulli](1971091102.md), I see another Colleague in front of me, who advertises with a popular [Slogan](700058.md) for solving *all* of our [Problems](600029.md):
 
 ![Universal Solution?](400000162.jpg)
 
