--- a/21.md
+++ b/21.md
@@ -80,7 +80,7 @@ During [My-MPA-Process](1000001000.md) I always had the [Feeling](60041.md), tha
 
 I can understand that also the [Family](180000008.md) of [Our-Mayor](70000069.md) probably had to endure great [Suffering](10000111.md) due to [Crimes](670012.md) of the [National-Socialism](141000012.md), but can this *really* still be a [Justification](600178.md) for this (at least for militant [Islamists](1200000004.md)) possible [Provocation](41010010.md) in [Tübingen](2000001.md)?
 
-Well, since I do not read [News-Papers](191000006.md) any more, I have to admit, that I don't know the *real* [Facts](600181.md) behind this [Decision](60095.md) and perhaps my possible wrong [Statement](600078.md) was just a [Provocation](41010010.md) to get even more [Publicity](60175.md) than [Mr-Palmer](70000069.md) does.
+Well, since I do not read the [Tagblatt](2010040.md), I have to admit, that I don't know the *real* [Facts](600181.md) behind this [Decision](60095.md) and perhaps my possible wrong [Statement](600078.md) was just a [Provocation](41010010.md) to get some [Publicity](60175.md), like [Mr-Palmer](70000069.md) also does it from Time to Time.
 
 In General I get most "Outside"-[Information](60007.md) from [Friends](180000002.md), like for Example from my [Contenance-Trainer](1971091169.md), to whom (with all Respect) I have more [Confidence](60015.md), than for Example to wordy [Psychologists](202000014.md) or [Jurists](670036.md), who get a big [Stage](60010007.md) from our beloved [Public-Service-Broadcasters](191000003.md).
 
