--- a/21.md
+++ b/21.md
@@ -92,9 +92,9 @@ In Order to save [Money](6666.md) and [Time](10000002.md) for future Candidates,
 
 ![Cheap Machine?](400000161.jpg)
 
-When driving back with [My-Bulli](1971091102.md), I see another Colleague in front of me, who advertises with a popular [Slogan](700058.md) for solving *all* of our [Problems](600029.md):
+When driving back with [My-Bulli](1971091102.md), I see another Colleague in front of me, who advertises with a popular [Slogan](700058.md), that would would also please my [My-Former-Betrothed](1971091170.md), who just sent me a nice [Song](90000011.md) [[1]](17051) for [Reconciliation](600182.md):
 
-![Universal Solution?](400000162.jpg)
+![Real Hope?](400000162.jpg)
 
 #### Blog-Chain-Time 2023.10.26-11:30 at the Fahrschule-Armbruster  <a id="17001"/>
 ###### Topics: 123-Friends, MPA, Feelings
@@ -125,7 +125,8 @@ Howsoever, at least for me this [Nightmare](404.md) seems to be finally over now
 
 ### Footnotes
 
-[<a id="17050"/>0] Beweismittel abgelehnt: [https://holzheu.de](https://www.holzheu.de/meine-erste-mpu-beweismittel-abgelehnt)
+[<a id="17050"/>0] Beweismittel abgelehnt: [https://holzheu.de](https://www.holzheu.de/meine-erste-mpu-beweismittel-abgelehnt) \
+[<a id="17051"/>1] Schen, dass di gibt: [https://youtu.be](https://youtu.be/oSKmStj7COY?si=fCXmjKHFEHXGNRdX)
 
 ## Day-115: Men-Women-Universe <a id="15000"/>
 
