--- a/21.md
+++ b/21.md
@@ -92,7 +92,7 @@ In Order to save [Money](6666.md) and [Time](10000002.md) for future Candidates,
 
 ![Cheap Machine?](400000161.jpg)
 
-When driving back with [My-Bulli](1971091102.md), I see another Colleague in front of me, who advertises with a popular [Slogan](700058.md), that would would also please my [My-Former-Betrothed](1971091170.md), who just sent me a nice [Song](90000011.md) [[1]](17051) for [Reconciliation](600182.md):
+When driving back with [My-Bulli](1971091102.md), I see another Colleague in front of me, who advertises with a popular [Slogan](700058.md), that would would also please my [My-Former-Betrothed](1971091170.md), who just sent me a nice [Song](90000011.md) [[1]](#17051) for [Reconciliation](600182.md):
 
 ![Real Hope?](400000162.jpg)
 
