--- a/21.md
+++ b/21.md
@@ -950,7 +950,7 @@ So being the [Best](60065.md) seems to be important for many People and this is 
 #### Blog-Chain-Time 2023.05.01-20:30 on a Smoking-Round with Diana <a id="3802"/>
 ###### Topics: Tooth-Pain, Diana, Botanics
 
-My Neighbour Diana has strong [Tooth-Pain](48000010.md) since some Days and asks for some [Analgesics](810003.md). Fortunately [my](1971091142.md) Room-Mate has some [Paracetamol](810004.md) for her.
+My Neighbour [Diana](1971091170.md) has strong [Tooth-Pain](48000010.md) since some Days and asks for some [Analgesics](810003.md). Fortunately [my](1971091142.md) Room-Mate has some [Paracetamol](810004.md) for her.
 
 We then make together a small Smoking-Round and speak about the [Schizophrenia](48000011.md) of a Friend.
 
