--- a/600183.md
+++ b/600183.md
@@ -1,3 +1,3 @@
 # Option
 
-An Option is a [Possiblity](404.md) of [Choice](60095.md).
+An Option is a [Possiblity](600184.md) for [Choice](60095.md).
