--- a/21.md
+++ b/21.md
@@ -92,7 +92,7 @@ In Order to save [Money](6666.md) and [Time](10000002.md) for future Candidates,
 
 ![Cheap Machine?](400000161.jpg)
 
-But I am almost sure, that with my [Idea](600012.md) I will get a new [Fight](1200000007.md) with [My-Dangerous-Occupant](88.md), who is a *real* [Warrior](1200000005.md) against [Combustion-Engines](200400008.md), but perhaps we can get [Cease-Fire](1200000008.md) by using [Motor-Bikes](200500003.md) with [Electric-Motor](200400009.md).
+But I am almost sure, that with my [Idea](600012.md) I will get a new [Fight](1200000007.md) with [My-Dangerous-Occupant](88.md), who is a *real* [Warrior](1200000005.md) against [Combustion-Engines](200400008.md), but perhaps we can get [Cease-Fire](1200000008.md) by using [Electric-Motor-Bikes](200500006.md).
 
 When driving back with [My-Bulli](1971091102.md), I see another Colleague in front of me, who advertises with a popular [Slogan](700058.md), that would would also please my [My-Former-Betrothed](1971091170.md), who just sent me a nice [Song](90000011.md) [[1]](#17051) for [Reconciliation](600182.md):
 
