--- a/70000070.md
+++ b/70000070.md
@@ -1,3 +1,7 @@
 # Philipp_Ham-Kuman
 
 Philipp_Ham-Kuman is a [Human](40000001.md).
+
+## Links
+
+- Home-Page: [https://www.hamkuman.com](https://www.hamkuman.com)
