--- a/21.md
+++ b/21.md
@@ -70,7 +70,7 @@
 ## Day-117: MPA-Final <a id="17000"/>
 
 #### Blog-Chain-Time 2023.11.02-14:00 at the Landrats-Amt  <a id="17002"/>
-###### Topics: MPA, Justice, Politics, War
+###### Topics: MPA, Justice, Politics, War, Peace
 
 Today I meet my dear [Mrs-N](1000001002.md) again to finally get back all my Driving-[Rights](670004.md) from the [Our-Landrats-Amt](140100002.md). In the Office I also meet her [Boss](180000013.md), and with whom I already had a "friendly" [Conversation](40202001.md) right at the [Beginning](60154.md) of my personal [Battle](1200000007.md) with the [Paragraph-Riders](1200000006.md).
 
@@ -92,11 +92,12 @@ In Order to save [Money](6666.md) and [Time](10000002.md) for future Candidates,
 
 ![Cheap Machine?](400000161.jpg)
 
-But I am almost sure, that with my [Idea](600012.md) I will get a new [Fight](1200000007.md) with [My-Dangerous-Occupant](88.md), who is a *real* [Warrior](1200000005.md) against [Combustion-Engines](200400008.md), but perhaps we can get [Cease-Fire](1200000008.md) by using [Electric-Motor-Bikes](200500006.md).
+Arrived at Home I present my glory [Idea](600012.md) to my [My-Dangerous-Occupant](88.md) and get into the next [Battle](1200000007.md), because she is a *real* [Warrior](1200000005.md) against [Combustion-Engines](200400008.md), but perhaps we can get [Cease-Fire](1200000008.md) by using [Electric-Motor-Bikes](200500006.md).
 
-When driving back with [My-Bulli](1971091102.md), I see another Colleague in front of me, who advertises with a popular [Slogan](700058.md), that would would also please my [My-Former-Betrothed](1971091170.md), who just sent me a nice [Song](90000011.md) [[1]](#17051) for [Reconciliation](600182.md):
+It is really hard to pacify Everybody, which reminds me to a [Slogan](700058.md) I saw on my Way Home from [Our-Landrats-Amt](140100002.md), that would also calm down [My-Still-Angry-Friend](1971091170.md), with whom Today I had yet another [Dispute](600185.md) about "What (or who?) is Right":
 
-![The Solution?](400000162.jpg)
+![](400000162.jpg)
+![Trotzdem "Schen, dass di gibt!"](400000164.mp3)
 
 #### Blog-Chain-Time 2023.10.26-11:30 at the Fahrschule-Armbruster  <a id="17001"/>
 ###### Topics: 123-Friends, MPA, Feelings
