--- a/21.md
+++ b/21.md
@@ -92,9 +92,7 @@ In Order to save [Money](6666.md) and [Time](10000002.md) for future Candidates,
 
 ![Cheap Machine?](400000161.jpg)
 
-Arrived at Home I present my glory [Idea](600012.md) to my [My-Dangerous-Occupant](88.md) and get into the next [Battle](1200000007.md), because she is a *real* [Warrior](1200000005.md) against [Combustion-Engines](200400008.md), but perhaps we can get [Cease-Fire](1200000008.md) by using [Electric-Motor-Bikes](200500006.md).
-
-It is really hard to pacify Everybody, which reminds me to a [Slogan](700058.md) I saw on my Way Home from [Our-Landrats-Amt](140100002.md), that would also calm down [My-Still-Angry-Friend](1971091170.md), with whom Today I had yet another [Dispute](600185.md) about "What (or who?) is Right":
+Arrived at Home I present my glory [Idea](600012.md) to my [My-Dangerous-Occupant](88.md) and get into the next [Battle](1200000007.md), because she is a *real* [Warrior](1200000005.md) against [Combustion-Engines](200400008.md), but perhaps we can get [Cease-Fire](1200000008.md) by using [Electric-Motor-Bikes](200500006.md):
 
 ![](400000162.jpg)
 ![Trotzdem "Schen, dass di gibt!"](400000164.mp3)
