Remove Foot-Note

--- a/21.md
+++ b/21.md
@@ -126,8 +126,7 @@ Howsoever, at least for me this [Nightmare](404.md) seems to be finally over now
 
 ### Footnotes
 
-[<a id="17050"/>0] Beweismittel abgelehnt: [https://holzheu.de](https://www.holzheu.de/meine-erste-mpu-beweismittel-abgelehnt) \
-[<a id="17051"/>1] Schen, dass di gibt: [https://youtu.be](https://youtu.be/oSKmStj7COY?si=fCXmjKHFEHXGNRdX)
+[<a id="17050"/>0] Beweismittel abgelehnt: [https://holzheu.de](https://www.holzheu.de/meine-erste-mpu-beweismittel-abgelehnt)
 
 ## Day-115: Men-Women-Universe <a id="15000"/>
 
