--- a/91000010.md
+++ b/91000010.md
@@ -1,3 +1,8 @@
 # Schen-dass-di-gibt
 
 Schen-dass-di-gibt is a [Song](90000011.md) from [Philipp_Ham-Kuman](70000070.md).
+
+## Information
+
+- Music & Lyrics: [Philipp_Ham-Kuman](70000070.md)
+- Music-Production: [Matías_Córdova](70000071.md)
