--- a/70000070.md
+++ b/70000070.md
@@ -1,7 +1,7 @@
-# Philipp_Ham-Kuman
+# Philipp_Ham-Kuman <a id="0"/>
 
 Philipp_Ham-Kuman is a [Human](40000001.md).
 
-## Links
+## Links <a id="1000"/>
 
 - Home-Page: [https://www.hamkuman.com](https://www.hamkuman.com)
