--- a/21.md
+++ b/21.md
@@ -92,7 +92,7 @@ In Order to save [Money](6666.md) and [Time](10000002.md) for future Candidates,
 
 ![Cheap Machine?](400000161.jpg)
 
-Arrived at Home I present my glory [Idea](600012.md) to my [My-Dangerous-Occupant](88.md) and get into the next [Battle](1200000007.md), because she is a *real* [Warrior](1200000005.md) against [Combustion-Engines](200400008.md), but perhaps we can get [Cease-Fire](1200000008.md) by using [Electric-Motor-Bikes](200500006.md):
+Arrived at Home I present my glory [Solution](600024.md) to my [My-Dangerous-Occupant](88.md) and get into the next [Battle](1200000007.md), because she is a *real* [Warrior](1200000005.md) against [Combustion-Engines](200400008.md), but perhaps we can get [Cease-Fire](1200000008.md) by using [Electric-Motor-Bikes](200500006.md):
 
 ![](400000162.jpg)
 ![Trotzdem "Schen, dass di gibt!"](400000164.mp3)
